[package]
name = "cumulus-test-relay-sproof-builder"
version = '0.1.0'
authors = ["Axia Technologies <admin@axia.io>"]
edition = '2018'

[dependencies]
# Other dependencies
codec = { package = "axia-scale-codec", version = "2.3.0", default-features = false, features = [ "derive" ] }

# Axlib dependencies
sp-state-machine = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

# AXIA dependencies
axia-primitives = { git = "https://github.com/axia-tech/axia", default-features = false, branch = "dev" }

# Cumulus dependencies
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-state-machine/std",
	"sp-runtime/std",
	"sp-std/std",
	"cumulus-primitives-core/std",
]
