[package]
name = "cumulus-test-runtime"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
codec = { package = "axia-scale-codec", version = "2.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Axlib dependencies
frame-executive = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-support = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-balances = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-randomness-collective-flip = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-sudo = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-timestamp = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
pallet-transaction-payment = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-block-builder = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-core = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-inherents = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-io = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-offchain = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-session = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-std = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-transaction-pool = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }
sp-version = { git = "https://github.com/axia-tech/axia-core", default-features = false, branch = "dev" }

# Cumulus dependencies
cumulus-pallet-allychain-system = { path = "../../pallets/allychain-system", default-features = false }
cumulus-primitives-core = { path = "../../primitives/core", default-features = false }
cumulus-primitives-timestamp = { path = "../../primitives/timestamp", default-features = false }

[build-dependencies]
axlib-wasm-builder = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"scale-info/std",
	"cumulus-pallet-allychain-system/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
upgrade = []
