[package]
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2018"
name = "allychain-info"
version = "0.1.0"

[dependencies]
codec = {  git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", version = "2.3.0", default-features = false, features = ["derive"] }
scale-info = { git = "https://github.com/axia-tech/scale-info", branch = "v1.0.0", version = "1.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }
frame-system = { git = "https://github.com/axia-tech/axlib", default-features = false, branch = "dev" }

cumulus-primitives-core = { path = "../../../primitives/core", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
]
