[package]
name = "cumulus-client-consensus-common"
description = "Cumulus specific common consensus implementations"
version = "0.1.0"
authors = ["Axia Technologies <admin@axiacoin.network>"]
edition = "2018"

[dependencies]
# Axlib deps
sc-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-consensus = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
sp-trie = { git = "https://github.com/axia-tech/axlib", branch = "dev" }

# AXIA deps
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = {  git = "https://github.com/axia-tech/axia-scale-codec", package = "axia-scale-codec", branch = "v2.3.1", version = "2.3.0", features = [ "derive" ] }
tracing = "0.1.25"
async-trait = "0.1.42"
dyn-clone = "1.0.4"

[dev-dependencies]
# Axlib deps
sp-tracing = { git = "https://github.com/axia-tech/axlib", branch = "dev" }
# Cumulus dependencies
cumulus-test-client = { path = "../../../test/client" }
# Other deps
futures-timer = "3.0.2"
