[package]
name = "cumulus-client-consensus-common"
description = "Cumulus specific common consensus implementations"
version = "0.1.0"
authors = ["Axia Technologies <admin@axia.io>"]
edition = "2018"

[dependencies]
# Axlib deps
sc-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sc-client-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-consensus = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-runtime = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-blockchain = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-api = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
sp-trie = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }

# AXIA deps
axia-primitives = { git = "https://github.com/axia-tech/axia", branch = "dev" }

# Other deps
futures = { version = "0.3.8", features = ["compat"] }
codec = { package = "axia-scale-codec", version = "2.3.0", features = [ "derive" ] }
tracing = "0.1.25"
async-trait = "0.1.42"
dyn-clone = "1.0.4"

[dev-dependencies]
# Axlib deps
sp-tracing = { git = "https://github.com/axia-tech/axia-core", branch = "dev" }
# Cumulus dependencies
cumulus-test-client = { path = "../../../test/client" }
# Other deps
futures-timer = "3.0.2"
